syntax = "proto3";

package xyz.block.ftl.v1;

import "xyz/block/ftl/v1/ftl.proto";

option go_package = "github.com/block/ftl/backend/protos/xyz/block/ftl/v1;ftlv1";
option java_multiple_files = true;

message GetDeploymentContextRequest {
  string deployment = 1;
}

message GetDeploymentContextResponse {
  enum DbType {
    DB_TYPE_UNSPECIFIED = 0;
    DB_TYPE_POSTGRES = 1;
    DB_TYPE_MYSQL = 2;
  }

  message DSN {
    string name = 1;
    DbType type = 2;
    string dsn = 3;
  }

  string module = 1;
  string deployment = 2;
  map<string, bytes> configs = 3;
  map<string, bytes> secrets = 4;
  repeated DSN databases = 5;
  map<string, string> egress = 7;
}

service DeploymentContextService {
  // Ping service for readiness.
  rpc Ping(PingRequest) returns (PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // Get configuration state for the deployment
  rpc GetDeploymentContext(GetDeploymentContextRequest) returns (stream GetDeploymentContextResponse);
}
